# dalle-art-composer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bio.txt  blend-files.txt  blend-mine.py  blend.py  generate.py  movie.py  prompts-films.yml  prompts-history.yml  prompts-manual.yml  prompts-original.yml  prompts-paintings.yml  prompts-people.yml  prompts-quantum.yml  prompts.yml  pyproject.toml
